migrate compressed chips to Bubblegum V2
